# Forecastin

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  AGENTS.md  ARCHITECTURE_DECISIONS.md  BRANCH_CLEANUP.md  BRANCH_CLEANUP_SUMMARY.md  BROWSER_TESTING_GUIDE.md  BUG-016-SOLUTION.md  BUG-017-IMPLEMENTATION-SUMMARY.md  BUG-017-INDEX.md  BUG-017-QUICK-START.md  CHANGELOG.md  CODE_AUDIT_REPORT.md  CODE_QUALITY_REVIEW.md  CONTRIBUTING.md  CRITICAL_FIXES_NEEDED.md  DELETE_DEPENDABOT.md  EXECUTE_MIGRATION_NOW.md  FIX_PLAN.md  GITHUB_CLEANUP_GUIDE.md  GITHUB_ISSUE_SUMMARY.md  HEATMAP.md  HIGH_LEVEL_OVERVIEW.md  HOSTILE_REVIEW_ROUND2.md  IMPLEMENTATION_SUMMARY.md  LTREE_REFRESH_IMPLEMENTATION.md  Makefile  NEXT_STEPS.md  Original Roadmap.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE_0_BRANCH_PROTECTION.md  PHASE_0_BRANCH_SETUP.md  PHASE_0_COMPLETION_SUMMARY.md  PHASE_1_COMPLETION_SUMMARY.md  PRODUCTION_READINESS_FIXES.md  PR_DEFECT_2.md  PR_DEFECT_4.md  (+55 more)
.do/: DEPLOY.md  QUICKSTART.md  app.yaml  env.production.example
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
GUI Update/: Forecastin_Consolidated_Knowledge_Pack_2025-11-06.md  Research improvements.md  Scientific Enhancement of the Lens System.md  Scientific, Self-Iterating Intelligence System.md  UPDATED GUI RECOMMENDATIONS FOR ADVANCED FORECASTIN ROADMAP.md
api/: .dockerignore  .env.example  DOCKERFILE_OPTIMIZATION.md  Dockerfile  Dockerfile.full  Dockerfile.railway  RAILWAY_BUILD_FIX.md  REQUIREMENTS_README.md  config_validation.py  conftest.py  main.py  railway.json  railway.toml  requirements-dev.txt  requirements.railway.txt  requirements.txt  requirements_mini.txt  requirements_minimal.txt  requirements_new.txt  validate_performance_slos.py
checks/: BUGLOG.md  DAY_1-2_SUMMARY.md  DEFECTS.md  EVIDENCE_INDEX.md  HEATMAP.md  HONEST_REVIEW.json  HONEST_REVIEW.md  INVENTORY.md  PR_QUEUE.md  README.md  SCOUT_LOG.md  api_ui_drift.md  bug_report.md  feature_flags_map.md  frontend_depgraph.json  gap_map.md  help_docs_consolidation.md  perf_notes.md  perf_smells.json  quick_wins.json  ts_prune.txt  webui_dataflow_report.md  ws_server_diagnostics.md
contracts/: README.md  openapi.json  ws.json
docs/: CI_REQUIREMENTS.md  CLAUDE_RAILWAY_SETUP_PROMPT.md  CODE_ANALYSIS_ANCESTOR_PERFORMANCE.md  CRITICAL_ISSUES_RESOLUTION_STATUS.md  DEVELOPER_SETUP.md  DISCOVERY.md  DOCUMENTATION_UPDATE_SUMMARY_2025-11-06.md  DOCUMENTATION_UPDATE_SUMMARY_2025-11-07.md  ENTITY_EXTRACTION_ARCHITECTURE.md  ENTITY_EXTRACTION_INTEGRATION_PLAN.md  ENVIRONMENT_VARIABLES.md  FEATURE_FLAG_MIGRATION_COMPLETION_REPORT.md  FEATURE_FLAG_MIGRATION_EXECUTION_GUIDE.md  FEATURE_FLAG_MIGRATION_QUICK_START.md  FEATURE_FLAG_MIGRATION_README.md  FEATURE_FLAG_NAMING_STANDARD.md  GEOSPATIAL_DEPLOYMENT_GUIDE.md  GEOSPATIAL_FEATURE_FLAGS.md  GITHUB_ACTIONS_GUIDE.md  GOLDEN_SOURCE.md  GOLDEN_SOURCE_PHASE1_ALIGNMENT.md  IMPLEMENTATION_SUMMARY.md  LTREE_REFRESH_IMPLEMENTATION.md  MIGRATION_GUIDE_FF_NAMES.md  ML_AB_TESTING_API_SPECS.md  ML_AB_TESTING_ARCHITECTURE_DESIGN.md  ML_AB_TESTING_FRAMEWORK.md  ML_AB_TESTING_INTEGRATION_PLAN.md  ML_AB_TESTING_RISK_MANAGEMENT.md  PERFORMANCE_DIAGNOSTIC_REPORT.md  PERFORMANCE_INVESTIGATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASE_0_ARCHITECTURE_PLAN.md  PHASE_10_LONG_TERM_SUSTAINABILITY.md  PHASE_2_3_IMPLEMENTATION.md  PHASE_6_ADVANCED_SCENARIO_CONSTRUCTION.md  PHASE_7_UI_UX_ENHANCEMENT.md  PHASE_8_PERFORMANCE_SCALING.md  POLYGON_LINESTRING_ARCHITECTURE.md  PULL_REQUEST_TEMPLATE.md  (+27 more)
fixtures/: sample_layer_data.json  sample_ws_message.json
frontend/: .dockerignore  .env.example  .eslintrc.cjs  .eslintrc.js  .prettierignore  DOCKERFILE_OPTIMIZATION.md  Dockerfile  Dockerfile.dev  README.md  frontend-nginx.conf  index.html  nginx-fixed.conf  nginx.conf  package-lock.json  package.json  railway.json  railway.toml  tailwind.config.js  ts_errors.txt  ts_errors_new.txt  tsc_output.txt  tsconfig.json  vite.config.ts  vitest.config.ts
github_issues/: README.md  (+11 more)
(+352 files in other folders)
